--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "angular-pan-zoom": "^1.0.18",
+    "angularfire2": "^5.0.0-rc.6",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
+    "firebase": "^4.11.0",
     "npm": "^5.7.1",
     "panzoom": "^4.1.0",
     "rxjs": "^5.5.6",
