--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@ng-select/ng-select": "^2.1.0",
     "angularfire2": "^5.0.0-rc.6",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
